[package]
name = "plevy"
version = "0.1.0"
authors = ["Jari Zwarts <jari@oberon.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
bincode = "1.3.1"
simplelog = "0.9.0"
log = "0.4.11"
structopt = "0.3.21"
anyhow = "1.0.37"
fuse = { git = "https://github.com/zargony/fuse-rs", rev = "39fde4a5c47ce370d228ac190f950bd835db7f47" }
libc = "0.2.82"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"